--- a/Serenity/style.css
+++ b/Serenity/style.css
@@ -111,6 +111,10 @@ a{
 }
 
 
+img, svg{
+    width: 100%;
+}
+
 /* Research */
 
 .research{
@@ -153,6 +157,7 @@ a{
     text-align: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 8rem;
 }
 .info-text h4{
@@ -570,4 +575,104 @@ span{
         margin-bottom: 1.5rem;
     }
     
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* for tablets */
+
+
+
+
+
+@media only screen and (max-width: 1080px){
+
+
+    .projectoverview{
+        width: 100%;
+    }
+    .objectives{
+        width: 100%;
+    }
+    .overview{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        margin-top: 8rem;
+    }
+    .research{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+    }
+    .research-img{
+        text-align: center;
+        width: 100%;
+    }
+    .research-img img{
+        width: 100%;
+    }
+
+    
+  .socials{
+    width: 100%;
+    height: 100%;
+    margin: 10% 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0rem;
+    /* flex-wrap: wrap; */
+
+    gap: 1rem;
+}
+.socials a{
+    font-size: 1.2rem;
+    width: 100%;
+    margin: 0rem;
+    text-decoration: none;
+    background: -webkit-linear-gradient(#e3e3e3, #9f9f9f);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+#chat{
+    font-weight: 700;
+    background: -webkit-linear-gradient(#00BF93, #007A5E);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.row-1{
+    width: 100%;
+    margin: 5% 0%;
+    display: flex;
+    justify-content: space-between;
+}
+.row-2{
+    width: 100%;
+    display: flex;
+}
+span{
+    color: white;
+}
+.socials a:hover{
+    font-size: 2rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    transition-duration: 1s;
+    text-decoration: underline;
+    background: -webkit-linear-gradient(#e3e3e3, #9f9f9f);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 }
